# thermal-model

./: Cargo.toml  LICENSE  README.md
examples/: diffusion.rs  heat_diffusion.rs  statistics.rs  two_molecules.rs
src/: lib.rs  main.rs  model.rs  utils.rs  visualizer.rs
src/model_1/: mod.rs
src/model_2/: kd_tree.rs  mod.rs
src/model_3/: mod.rs  thread_sync.rs
src/utils/: error.rs  math.rs  mod.rs
