[package]
name = "thermal-model"
version = "0.1.0"
edition = "2021"
author = "MqCreaple"
repository = "https://github.com/MqCreaple/thermal-model"

[dependencies]
approx = "0.5.1"
eframe = { version = "0.28.0", features = [
    "glow"
] }
egui_plot = "0.28.0"
num = "0.4.3"
ordered-float = "4.2.1"
rand = "0.8.5"
getrandom = { version = "0.2.3", features = ["js"] }
log = "0.4.22"
chrono = "0.4.38"
env_logger = "0.11.3"
ringbuffer = "0.15.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
