[package]
name = "thermal-model"
version = "0.1.0"
edition = "2021"
author = "MqCreaple"
repository = "https://github.com/MqCreaple/thermal-model"

[dependencies]
approx = "0.5.1"
eframe = { version = "0.29.1", features = [
    "glow"
] }
egui_plot = "0.29.0"
num = "0.4.3"
ordered-float = "4.5.0"
rand = "0.8.5"
getrandom = { version = "0.2.3", features = ["js"] }
log = "0.4.22"
chrono = "0.4.38"
env_logger = "0.11.5"
ringbuffer = "0.15.0"
rand_distr = "0.4.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.47"
